--- a/src/components/Textarea/textarea.scss
+++ b/src/components/Textarea/textarea.scss
@@ -2,8 +2,8 @@
   all: unset;
   box-sizing: border-box;
   display: block;
-  width: 100%;
-  max-width: 320px;
+  width: 320px;
+  max-width: 100%;
 
   /* Allow vertical resizing by default */
   min-height: 80px;
@@ -25,8 +25,7 @@
 
   &:focus {
     border-color: var(--color-primary);
-    box-shadow: 0 0 0 2px
-      color-mix(in srgb, var(--color-primary) 20%, transparent);
+    box-shadow: 0 0 0 2px color-mix(in srgb, var(--color-primary) 20%, transparent);
   }
 
   &--outline {
